crates/ars-components/src/specialized/clipboard/snapshots/ars_components__specialized__clipboard__tests__clipboard_indicator_copying_snapshot.snap
---
source: crates/ars-components/src/specialized/clipboard/mod.rs
expression: "snapshot_attrs(&api_for_state(State::Copying).indicator_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "indicator",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "clipboard",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "copying",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
    ],
    styles: [],
}
