crates/ars-components/src/specialized/clipboard/snapshots/ars_components__specialized__clipboard__tests__clipboard_trigger_error_snapshot.snap
---
source: crates/ars-components/src/specialized/clipboard/mod.rs
expression: "snapshot_attrs(&api_for_state(State::Error).trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "clipboard",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "error",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Copy failed, click to retry",
            ),
        ),
        (
            Id,
            String(
                "clip-trigger",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
