crates/ars-components/src/specialized/clipboard/snapshots/ars_components__specialized__clipboard__tests__clipboard_value_text_snapshot.snap
---
source: crates/ars-components/src/specialized/clipboard/mod.rs
expression: "snapshot_attrs(&api_for_state(State::Idle).value_text_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "value-text",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "clipboard",
            ),
        ),
    ],
    styles: [],
}
